--- a/src/app/src/main/res/layout/fragment_user_order.xml
+++ b/src/app/src/main/res/layout/fragment_user_order.xml
@@ -6,6 +6,7 @@
     tools:context=".View.UserPageFragments.UserOrderFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/order_list"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"/>
 
