--- a/src/app/src/main/res/layout/fragment_user_order_detail.xml
+++ b/src/app/src/main/res/layout/fragment_user_order_detail.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".View.UserPageFragments.UserInformationFragment">
 
     <LinearLayout
@@ -10,6 +11,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_top"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <ImageButton
+                android:id="@+id/save_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_centerInParent="true"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/round_button"
+                android:src="@drawable/back_icon"/>
+            <TextView
+                android:text="@string/id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                />
+            <TextView
+                android:id="@+id/orderId"
+                android:text="@string/id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:paddingHorizontal="10sp"
+                android:textStyle=""
+                />
+        </androidx.appcompat.widget.Toolbar>
         <TextView
             android:text="@string/receiver_name"
             android:layout_width="match_parent"
@@ -108,6 +139,7 @@
             android:layout_margin="5dp"
             />
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
