--- a/src/app/src/main/res/layout/fragment_user_order_item.xml
+++ b/src/app/src/main/res/layout/fragment_user_order_item.xml
@@ -2,7 +2,8 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/layout_bg_rounded_corner"
+    android:background="@drawable/setting_button"
+    android:clickable="true"
     android:orientation="vertical"
     >
     <LinearLayout
@@ -26,37 +27,38 @@
                 android:orientation="vertical"
                 >
                 <LinearLayout
-                    android:layout_marginBottom="10dp"
+                    android:layout_weight="3"
+                    android:layout_marginBottom="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="@string/id"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:layout_marginRight="5dp"
+                        android:layout_height="wrap_content"/>
+                    <HorizontalScrollView
+                        android:paddingRight="20dp"
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:scrollbars="none"
+                        >
+                        <TextView
+                            android:id="@+id/orderId"
+                            android:layout_width="wrap_content"
+                            android:text="@string/lorem"
+                            android:textSize="14sp"
+                            android:layout_height="wrap_content"/>
+                    </HorizontalScrollView>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginBottom="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="6">
-                    <LinearLayout
-                        android:layout_weight="3"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:text="@string/id"
-                            android:textSize="14sp"
-                            android:textStyle="bold"
-                            android:layout_marginRight="5dp"
-                            android:layout_height="wrap_content"/>
-                        <HorizontalScrollView
-                            android:paddingRight="20dp"
-                            android:layout_marginBottom="10dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:scrollbars="none"
-                            >
-                            <TextView
-                                android:id="@+id/orderId"
-                                android:layout_width="wrap_content"
-                                android:text="@string/lorem"
-                                android:textSize="14sp"
-                                android:layout_height="wrap_content"/>
-                        </HorizontalScrollView>
-                    </LinearLayout>
                     <LinearLayout
                         android:layout_weight="3"
                         android:layout_width="0dp"
@@ -70,18 +72,40 @@
                             android:layout_height="wrap_content"/>
                         <HorizontalScrollView
                             android:paddingRight="20dp"
-                            android:layout_marginBottom="10dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:scrollbars="none"
                             >
                             <TextView
-                                android:id="@+id/totalPrice"
+                                android:id="@+id/orderPrice"
                                 android:layout_width="wrap_content"
                                 android:text="@string/lorem"
                                 android:textSize="14sp"
                                 android:layout_height="wrap_content"/>
                         </HorizontalScrollView>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_weight="3"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:text="@string/state"
+                                android:textSize="14sp"
+                                android:textStyle="bold"
+                                android:layout_height="wrap_content"/>
+                            <TextView
+                                android:id="@+id/orderState"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="14sp"
+                                android:paddingLeft="10dp"
+                                android:text="0"
+                                />
+                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
                 <RelativeLayout
@@ -102,10 +126,10 @@
                                 android:textStyle="bold"
                                 android:layout_height="wrap_content"/>
                             <TextView
-                                android:id="@+id/date"
+                                android:id="@+id/orderDate"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textSize="16sp"
+                                android:textSize="14sp"
                                 android:paddingLeft="10dp"
                                 android:text="0"
                                 />
@@ -116,24 +140,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         >
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:text="@string/state"
-                                android:textSize="14sp"
-                                android:textStyle="bold"
-                                android:layout_height="wrap_content"/>
-                            <TextView
-                                android:id="@+id/state"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textSize="16sp"
-                                android:paddingLeft="10dp"
-                                android:text="0"
-                                />
-                        </LinearLayout>
                     </HorizontalScrollView>
                 </RelativeLayout>
 
