--- a/src/app/src/main/res/navigation/nav_user_page.xml
+++ b/src/app/src/main/res/navigation/nav_user_page.xml
@@ -7,5 +7,17 @@
     <fragment
         android:id="@+id/userPageMainFragment"
         android:name="com.example.ecommerceapp.View.UserPageFragments.UserPageMainFragment"
-        android:label="UserPageMainFragment" />
+        android:label="UserPageMainFragment" >
+        <action
+            android:id="@+id/action_userPageMainFragment_to_userOrderDetailFragment"
+            app:destination="@id/userOrderDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/userOrderDetailFragment"
+        android:name="com.example.ecommerceapp.View.UserPageFragments.UserOrderDetailFragment"
+        android:label="UserOrderDetailFragment" >
+        <argument
+            android:name="orderId"
+            app:argType="string" />
+    </fragment>
 </navigation>
