--- a/src/app/src/main/res/layout/check_out_cart_item.xml
+++ b/src/app/src/main/res/layout/check_out_cart_item.xml
@@ -21,6 +21,7 @@
                 android:layout_gravity="center"
                 android:id="@+id/productImage"
                 android:layout_width="75dp"
+                android:background="@null"
                 android:layout_height="75dp"
                 />
             <LinearLayout
