--- a/src/app/src/main/res/layout/fragment_admin_account_item.xml
+++ b/src/app/src/main/res/layout/fragment_admin_account_item.xml
@@ -19,13 +19,14 @@
             android:layout_weight="2"
             android:layout_columnWeight="2"
             android:orientation="horizontal">
+
             <ImageButton
-                android:layout_gravity="center"
-                android:id="@+id/productImage"
+                android:id="@+id/account_avatar"
                 android:layout_width="75dp"
-                android:background="@null"
                 android:layout_height="75dp"
-                />
+                android:background="@null"
+                android:layout_gravity="center" />
+
             <LinearLayout
                 android:padding="10dp"
                 android:layout_gravity="center"
@@ -33,21 +34,32 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
-                <HorizontalScrollView
-
-                    android:layout_marginBottom="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:scrollbars="none"
-                    >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
                     <TextView
-                        android:id="@+id/productName"
                         android:layout_width="wrap_content"
-                        android:text="@string/lorem"
+                        android:text="@string/username"
                         android:textSize="14sp"
-                        android:textStyle="bold"
+                        android:textStyle="italic"
+                        android:paddingRight="4sp"
                         android:layout_height="wrap_content"/>
-                </HorizontalScrollView>
+                    <HorizontalScrollView
+
+                        android:layout_marginBottom="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:scrollbars="none"
+                        >
+                        <TextView
+                            android:id="@+id/account_username"
+                            android:layout_width="wrap_content"
+                            android:text="@string/lorem"
+                            android:textSize="14sp"
+                            android:textStyle="bold"
+                            android:layout_height="wrap_content"/>
+                    </HorizontalScrollView>
+                </LinearLayout>
                 <HorizontalScrollView
                     android:layout_gravity="bottom"
                     android:layout_width="wrap_content"
@@ -58,56 +70,22 @@
                         android:layout_height="wrap_content">
                         <TextView
                             android:layout_width="wrap_content"
-                            android:text="@string/total_price"
+                            android:text="@string/name"
                             android:textSize="14sp"
+                            android:textStyle="italic"
                             android:layout_height="wrap_content"/>
                         <TextView
-                            android:id="@+id/productPrice"
+                            android:id="@+id/account_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="16sp"
+                            android:textStyle="bold"
                             android:paddingLeft="10dp"
                             android:text="0"
                             />
                     </LinearLayout>
                 </HorizontalScrollView>
             </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_margin="4dp"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:background="@drawable/edittext_rounded_border"
-            android:orientation="horizontal"
-            android:layout_columnWeight="1">
-            <ImageButton
-                android:id="@+id/decreaseProductQuantity"
-                android:layout_width="wrap_content"
-                android:src="@drawable/arrow_left_icon_black"
-                android:background="@drawable/round_button"
-                android:layout_height="wrap_content"/>
-            <EditText
-                android:textSize="14sp"
-                android:padding="4sp"
-                android:background="@android:color/transparent"
-                android:hint="@string/quantity_holder"
-                android:gravity="center"
-                android:id="@+id/productQuantity"
-                android:inputType="number"
-                android:imeOptions="actionDone"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
-            <ImageButton
-                android:id="@+id/increaseProductQuantity"
-                android:layout_width="wrap_content"
-                android:src="@drawable/arrow_right_icon_black"
-                android:background="@drawable/round_button"
-                android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -129,11 +107,11 @@
                 android:background="@drawable/round_button"/>
 
             <ImageButton
-                android:id="@+id/check_button"
+                android:id="@+id/see_button"
                 android:layout_marginHorizontal="20dp"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@drawable/check_icon_green"
+                android:src="@drawable/eye_icon"
                 android:background="@drawable/round_button"/>
         </LinearLayout>
     </RelativeLayout>
