--- a/src/app/src/main/res/navigation/nav_admin_page.xml
+++ b/src/app/src/main/res/navigation/nav_admin_page.xml
@@ -9,5 +9,18 @@
         android:id="@+id/adminPageMainFragment"
         android:name="com.example.ecommerceapp.View.AdminPageFragments.AdminPageMainFragment"
         android:label="fragment_admin_page_main"
-        tools:layout="@layout/fragment_admin_page_main" />
+        tools:layout="@layout/fragment_admin_page_main" >
+        <action
+            android:id="@+id/action_adminPageMainFragment_to_adminAccountDetailFragment"
+            app:destination="@id/adminAccountDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/adminAccountDetailFragment"
+        android:name="com.example.ecommerceapp.View.AdminPageFragments.AdminAccountDetailFragment"
+        android:label="fragment_admin_account_detail"
+        tools:layout="@layout/fragment_admin_account_detail" >
+        <argument
+            android:name="accountId"
+            app:argType="string" />
+    </fragment>
 </navigation>
