--- a/src/app/src/main/res/layout/products_row_item.xml
+++ b/src/app/src/main/res/layout/products_row_item.xml
@@ -6,17 +6,18 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/prod_image"
+        android:id="@+id/product_image"
         android:layout_width="250dp"
         android:layout_height="500dp"
         android:adjustViewBounds="true"
-        android:transitionName="image"
         android:src="@drawable/image_holder"
+        android:transitionName="image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/btn_favourite"
@@ -29,12 +30,12 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Size"
-        app:layout_constraintStart_toStartOf="@+id/prod_name"
-        app:layout_constraintTop_toBottomOf="@+id/prod_name" />
+        android:text="In Stock"
+        app:layout_constraintStart_toStartOf="@+id/product_name"
+        app:layout_constraintTop_toBottomOf="@+id/product_name" />
 
     <TextView
         android:id="@+id/prod_qty_title"
@@ -47,7 +48,7 @@
         app:layout_constraintTop_toTopOf="@+id/textView8" />
 
     <TextView
-        android:id="@+id/prod_qty"
+        android:id="@+id/product_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -61,20 +62,20 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
-        android:id="@+id/prod_price"
+        android:id="@+id/product_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="$ 15.00"
         android:textColor="#42995C"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="@+id/prod_qty"
+        app:layout_constraintBottom_toBottomOf="@+id/product_quantity"
         app:layout_constraintEnd_toEndOf="@+id/prod_qty_title"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/prod_qty_title"
-        app:layout_constraintTop_toTopOf="@+id/prod_qty" />
+        app:layout_constraintTop_toTopOf="@+id/product_quantity" />
 
     <TextView
-        android:id="@+id/prod_name"
+        android:id="@+id/product_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
