--- a/src/app/src/main/res/menu/anonymous_toolbar.xml
+++ b/src/app/src/main/res/menu/anonymous_toolbar.xml
@@ -3,18 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/login"
-        android:icon="@android:drawable/ic_menu_gallery"
-        android:title="Menu 1"
+        android:icon="@drawable/login"
+        android:title="Menu1"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/signup"
-        android:icon="@android:drawable/ic_lock_lock"
-        android:title="Menu 2"
+        android:icon="@drawable/signup"
+        android:title="Menu2"
         app:showAsAction="always" />
     <item
         android:id="@+id/cart"
         android:checkable="false"
-        android:icon="@android:drawable/ic_lock_silent_mode"
+        android:icon="@drawable/carts"
         android:title="Menu3"
         app:showAsAction="always" />
 </menu>
