--- a/src/app/src/main/res/layout/activity_sign_up.xml
+++ b/src/app/src/main/res/layout/activity_sign_up.xml
@@ -1,163 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.LoginActivity"
-    android:orientation="vertical">
+    tools:context=".View.LoginActivity">
 
-    //logo+title
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+
         android:orientation="vertical">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:src="@drawable/logo"
-            android:layout_marginBottom="30dp">
-        </ImageView>
-        <TextView
+
+        //logo+title
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/signup_string"
-            android:textSize="50dp"
-            android:textAlignment="center"
-            android:layout_margin="20dp"
-            android:fontFamily="sans-serif"
-            android:textColor="@color/cardview_dark_background">
-        </TextView>
-    </LinearLayout>
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:src="@drawable/logo"
+                android:layout_marginBottom="30dp">
+            </ImageView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/signup_string"
+                android:textSize="50dp"
+                android:textAlignment="center"
+                android:layout_margin="20dp"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/cardview_dark_background">
+            </TextView>
+        </LinearLayout>
 
-    //Email
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingHorizontal="30dp"
-        android:layout_marginTop="20dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/email"
-            android:textSize="20dp"
-            android:textColor="@color/black">
-        </TextView>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:id="@+id/editText_signup_email"
-            android:hint="@string/email_hint"
-            android:background="@color/grey">
-        </EditText>
-    </LinearLayout>
-
-    //Password
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingHorizontal="30dp"
-        android:layout_marginTop="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/password"
-            android:textSize="20dp"
-            android:textColor="@color/black">
-        </TextView>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:id="@+id/editText_signup_password"
-            android:inputType="textPassword"
-            android:hint="@string/password_hint"
-            android:background="@color/grey">
-        </EditText>
-    </LinearLayout>
-
-    //Repass
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingHorizontal="30dp"
-        android:layout_marginTop="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/repass"
-            android:textSize="20dp"
-            android:textColor="@color/black">
-        </TextView>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:id="@+id/editText_signup_RePassword"
-            android:inputType="textPassword"
-            android:hint="@string/password_hint"
-            android:background="@color/grey">
-        </EditText>
-
-        <TextView
+        //Email
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/red"
-            android:text="Status"
-            android:textSize="20dp"
-            android:id="@+id/textView_signup_status">
+            android:orientation="vertical"
+            android:paddingHorizontal="30dp"
+            android:layout_marginTop="20dp">
 
-        </TextView>
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/email"
+                android:textSize="20dp"
+                android:textColor="@color/black">
+            </TextView>
 
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:id="@+id/editText_signup_email"
+                android:hint="@string/email_hint"
+                android:background="@color/grey">
+            </EditText>
+        </LinearLayout>
 
-    //SignUp button
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="50dp">
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:text="@string/sign_up"
-            android:padding="5dp"
-            android:id="@+id/btn_sign_up">
-
-        </Button>
-    </LinearLayout>
-
-    //Sign in
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
-        <TextView
-            android:layout_width="wrap_content"
+        //Password
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/sign_in"
-            android:textSize="20dp">
-        </TextView>
-        <TextView
-            android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:paddingHorizontal="30dp"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/password"
+                android:textSize="20dp"
+                android:textColor="@color/black">
+            </TextView>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:id="@+id/editText_signup_password"
+                android:inputType="textPassword"
+                android:hint="@string/password_hint"
+                android:background="@color/grey">
+            </EditText>
+        </LinearLayout>
+
+        //Repass
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/login"
-            android:textSize="20dp"
-            android:textStyle="italic"
-            android:textColor="@color/design_default_color_primary"
-            android:id="@+id/textView_login"></TextView>
+            android:orientation="vertical"
+            android:paddingHorizontal="30dp"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/repass"
+                android:textSize="20dp"
+                android:textColor="@color/black">
+            </TextView>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:id="@+id/editText_signup_RePassword"
+                android:inputType="textPassword"
+                android:hint="@string/password_hint"
+                android:background="@color/grey">
+            </EditText>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/red"
+                android:text="Status"
+                android:textSize="20dp"
+                android:id="@+id/textView_signup_status">
+
+            </TextView>
+        </LinearLayout>
+
+
+        //SignUp button
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="50dp">
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:text="@string/sign_up"
+                android:padding="5dp"
+                android:id="@+id/btn_sign_up">
+
+            </Button>
+        </LinearLayout>
+
+        //Sign in
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sign_in"
+                android:textSize="20dp">
+            </TextView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/login"
+                android:textSize="20dp"
+                android:textStyle="italic"
+                android:textColor="@color/design_default_color_primary"
+                android:id="@+id/textView_login"></TextView>
+        </LinearLayout>
+
+
+
     </LinearLayout>
-
-
-
-</LinearLayout>
+</androidx.core.widget.NestedScrollView>
